testdata/baselines/reference/submodule/conformance/moduleExportDuplicateAlias.errors.txt
test.js(1,27): error TS7016: Could not find a declaration file for module './moduleExportAliasDuplicateAlias'. 'moduleExportAliasDuplicateAlias.js' implicitly has an 'any' type.


==== test.js (1 errors) ====
    const { apply } = require('./moduleExportAliasDuplicateAlias')
                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './moduleExportAliasDuplicateAlias'. 'moduleExportAliasDuplicateAlias.js' implicitly has an 'any' type.
    apply()
    
==== moduleExportAliasDuplicateAlias.js (0 errors) ====
    exports.apply = undefined;
    function a() { }
    exports.apply()
    exports.apply = a;
    exports.apply()
    